# deff

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  install.sh
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  01-general.md  02-feature-request.md  03-documentation-issue.md
.github/workflows/: bump-version.yml  pr-checks.yml  release.yml
Formula/: pr-diff.rb
assets/syntaxes/: Dotenv.sublime-syntax  Handlebars.sublime-syntax  JSX.sublime-syntax  Kotlin.sublime-syntax  README.md  TSX.sublime-syntax  TypeScript.sublime-syntax
docs/: architecture.md
src/: app.rs  cli.rs  diff.rs  git.rs  lib.rs  main.rs  model.rs  render.rs  review.rs  syntax.rs  terminal.rs  text.rs
